--- a/.gitignore
+++ b/.gitignore
@@ -248,3 +248,26 @@ jspm_packages/
 *.njsproj
 *.sln
 *.sw?
+
+# Базы данных
+*.db
+*.sqlite
+*.sqlite3
+
+# Временные файлы и бэкапы
+*.backup
+*_backup
+__pycache__/
+*.pyc
+
+# Логи
+*.log
+logs/
+
+# Системные файлы
+.DS_Store
+Thumbs.db
+
+# Конфиденциальные данные
+.env
+config_secret.py
